# swm050-hal

./: Cargo.toml  README.md  memory.x
examples/: blinky.rs  blinky_delay.rs  blinky_timer.rs
src/: delay.rs  gpio.rs  lib.rs  prelude.rs  pwm.rs  syscon.rs  timer.rs  timers.rs  watchdog.rs
